# fluidsynth-lite

./: .gitignore  .travis.yml  CMakeLists.txt
fluidsynth/src/bindings/: fluid_cmd.h
fluidsynth/src/utils/: fluid_hash.c  fluid_ringbuffer.h  fluid_sys.c
src/: CMakeLists.txt
src/midi/: fluid_midi.c  fluid_seq.c
src/rvoice/: fluid_iir_filter.c  fluid_rvoice_event.c  fluid_rvoice_mixer.c  fluid_rvoice_mixer.h
src/sfloader/: fluid_defsfont.c  fluid_defsfont.h
src/synth/: fluid_synth.c  fluid_synth.h  fluid_tuning.c  fluid_tuning.h  fluid_voice.c
src/utils/: clang_stdatomic.h  fluid_atomic.h  fluid_hash.c  fluid_ringbuffer.c  fluid_ringbuffer.h  fluid_settings.c  fluid_sys.c  fluid_sys.h  fluidsynth_priv.h
